; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/freescale/imx/extr_imx51_ccm.c_pll_read_4.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/freescale/imx/extr_imx51_ccm.c_pll_read_4.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.imxccm_softc = type { i32*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.imxccm_softc*, i32, i32)* @pll_read_4 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pll_read_4(%struct.imxccm_softc* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.imxccm_softc*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.imxccm_softc* %0, %struct.imxccm_softc** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.imxccm_softc*, %struct.imxccm_softc** %4, align 8
  %8 = getelementptr inbounds %struct.imxccm_softc, %struct.imxccm_softc* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 8
  %10 = load %struct.imxccm_softc*, %struct.imxccm_softc** %4, align 8
  %11 = getelementptr inbounds %struct.imxccm_softc, %struct.imxccm_softc* %10, i32 0, i32 0
  %12 = load i32*, i32** %11, align 8
  %13 = load i32, i32* %5, align 4
  %14 = sub nsw i32 %13, 1
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds i32, i32* %12, i64 %15
  %17 = load i32, i32* %16, align 4
  %18 = load i32, i32* %6, align 4
  %19 = call i32 @bus_space_read_4(i32 %9, i32 %17, i32 %18)
  ret i32 %19
}

declare dso_local i32 @bus_space_read_4(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
